# embedded-usb-pd

./: AGENTS.md  Cargo.toml  deny.toml
.github/: copilot-instructions.md
.github/workflows/: check.yml
src/: constants.rs  lib.rs  usb.rs  vdm.rs
src/pdo/: mod.rs  rdo.rs  sink.rs  source.rs
src/ucsi/: mod.rs
src/ucsi/lpm/: get_alternate_modes.rs  get_cable_property.rs  get_connector_status.rs  get_error_status.rs  get_pdos.rs  set_power_level.rs
src/ucsi/ppm/: set_notification_enable.rs  state_machine.rs
src/ucsi/v1_2/: mod.rs
src/ucsi/v1_2/lpm/: connector_reset.rs  get_alternate_modes.rs  get_cable_property.rs  get_cam_supported.rs  get_connector_capability.rs  get_connector_status.rs  get_current_cam.rs  get_error_status.rs  get_pd_message.rs  get_pdos.rs  mod.rs  set_ccom.rs  set_new_cam.rs  set_pdr.rs  set_power_level.rs  set_uor.rs
src/ucsi/v1_2/ppm/: ack_cc_ci.rs  cancel.rs  get_capability.rs  mod.rs  ppm_reset.rs  set_notification_enable.rs  state_machine.rs
src/vdm/: mod.rs  svid.rs
src/vdm/structured/: header.rs  mod.rs
src/vdm/structured/command/discover_identity/: active_cable_vdo.rs  mod.rs  passive_cable_vdo.rs  product_vdo.rs  sop.rs  sop_prime.rs  ufp_vdo.rs  vpd_vdo.rs
src/vdm/structured/command/discover_identity/sop/: id_header_vdo.rs  mod.rs
src/vdm/structured/command/discover_identity/sop_prime/: id_header_vdo.rs  mod.rs
