[package]
name = "embedded-usb-pd"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal-async = "1.0.0"
bitfield = "0.19.0"
bincode = { version = "2.0.1", default-features = false }
aquamarine = "0.6.0"

[features]
default = []
defmt = ["dep:defmt"]

[lints.clippy]
correctness = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
