[package]
name = "embedded-usb-pd"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal-async = "1.0.0"
bitfield = "0.19.0"
bincode = { version = "2.0.1", default-features = false }

[features]
default = []
defmt = ["dep:defmt"]
ucsi-v1_2 = []

[lints.clippy]
correctness = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
